# Secugent.core

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.enterprise  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: determinism.yml  release.yml  secugent.yml
config/: models.yaml
deploy/: .env.example  Dockerfile  docker-compose.yml
docs/: OPEN_CORE.md
docs/security/: TRUST_ATTESTATION.md  TRUST_PROOF.md  threat_model.md
examples/langchain_demo/: README.md  run.py
examples/policy_demo/: README.md  policy.ko.json  run.py
examples/quickstart/: README.md  policy.json  run.py
regulations_examples/: README.md  default.json  strict_finance.json
release/: PUBLIC_RELEASE_RUNBOOK.md  RELEASE_NOTES_v0.1.0.md  public_manifest.yaml
scripts/: check_public_release.py  extract_public_repo.sh  gen_sbom.py
secugent/: __init__.py  config.py
secugent/agents/: __init__.py  dispatcher.py  head_agent.py
secugent/audit/: __init__.py  export.py  hash_chain.py  merkle.py  retention.py  scheduler.py  unscoped.py
secugent/cli/: __init__.py  __main__.py  backup.py  demo.py  evolution.py  migrate_store.py  restore.py  rotate_secret.py  sign_policy_bundle.py  verify.py
secugent/core/: __init__.py  agent_config.py  approval.py  contracts.py  cost_context.py  env.py  event_bus.py  event_store.py  event_store_async.py  event_store_base.py  event_store_pg.py  grounding.py  llm_client.py  logger.py  mechanical_oversight.py  provenance.py  regulations.py  risk_analyzer.py  rule_of_two.py  secrets.py  settings.py  tenancy.py  tenant_context.py
secugent/db/: __init__.py  migrate_sqlite_to_pg.py  store_facade.py
secugent/deploy/: __init__.py  airgap.py  errors.py
secugent/io/: __init__.py  staging.py
secugent/models/: __init__.py  catalog.py
secugent/observability/: __init__.py  logging.py  metrics.py  telemetry.py  tracing.py
secugent/orchestrator/: __init__.py  a2a_adapter.py  adapters.py  adapters_langchain.py  envelope_gate.py  errors.py  events.py  evidence_binding.py  grounding_context.py  lease.py  mcp_adapter.py  recovery.py  runner.py  state.py  wiring.py
secugent/prompts/: __init__.py  registry.py
secugent/regulations/: __init__.py  tenant_loader.py
secugent/sdk/: __init__.py  decorators.py  gate.py  middleware.py
secugent/steer/: __init__.py  interrupt_state.py  precommit.py  snapshots.py  steer.py
secugent/tools/: __init__.py  builtin.py  router.py
tests/: conftest.py
tests/agents/: test_head_da_h2_provenance.py  test_head_provenance_axes.py
tests/audit/: test_build_kms_provider.py  test_export_redaction.py  test_hash_chain_tamper.py  test_pg_chain_jsonb_roundtrip.py  test_retention.py  test_scheduler.py  test_subject_access_chain_invariant.py  test_subject_access_export.py
tests/cli/: test_backup_restore.py  test_demo.py  test_migrate_store_cli.py  test_rotate_secret.py  test_serve.py  test_sign_policy_bundle.py  test_verify.py  test_verify_deploy_preflight.py
tests/core/: test_approval_risk_band.py  test_aws_secrets_backend.py  test_axes_for_steps.py  test_build_secrets_backend.py  test_cost_context.py  test_event_bus.py  test_event_store_async.py  test_event_store_contract.py  test_event_store_pg_guards.py  test_gcp_secrets_backend.py  test_grounding.py  test_leader_lease.py  test_llm_clients.py  test_llm_usage_observer.py  test_oversight_patch_concurrency.py  test_provenance.py  test_regression_SG-FIX-02.py  test_rule_of_two.py  test_secrets_backends.py  test_tenancy.py  test_tenant_context.py  test_tenant_context_isolation.py
tests/db/: _fakes.py  test_async_live_store.py  test_migrate_sqlite_to_pg.py  test_store_selection.py  test_sync_pg_bridge.py
tests/desktop/: test_regression_SG-FIX-03.py  test_regression_SG-FIX-04.py  test_windows_sandbox_docker_bridge.py  test_windows_sandbox_exec_copy.py
tests/eval/: __init__.py  ab.py  conftest.py  metrics.py  risk_ko_golden.jsonl  test_eval_ab.py  test_risk_eval.py
tests/examples/: test_examples_smoke.py
tests/io/: test_staging_concurrent_commit.py
tests/ml/: __init__.py  test_regulation_converter_golden.py
tests/models/: test_catalog_whitelist.py
tests/observability/: test_alert_metric_contract.py  test_decision_gate_producer.py  test_logging_contract.py  test_metrics_definitions.py  test_metrics_emit.py  test_metrics_runner.py  test_telemetry.py
tests/ops/: test_deploy_auth_env_contract.py  test_determinism_workflow.py  test_release_workflow.py
tests/orchestrator/: test_a2a_adapter.py  test_a2a_httpx_transport.py  test_adapters_langchain.py  test_evidence_binding.py  test_grounding_context.py  test_lease_pg.py  test_lease_wiring.py  test_mcp_adapter.py  test_mcp_httpx_transport.py  test_recovery_boot.py  test_regression_SG-FIX-05.py  test_resume_toctou.py  test_run_state_wiring.py  test_runner_grounding_evidence.py  test_runner_lease.py  test_state_sqlite.py
tests/prompts/: test_registry_canary.py
tests/property/: __init__.py  test_canonicalize_props.py  test_connector_action_props.py  test_connector_ssrf_props.py  test_envelope_monotonic.py  test_label_lattice_props.py  test_label_merge_props.py  test_lease_recovery_props.py  test_policy_eval_props.py  test_retention_props.py  test_rule_of_two_props.py
tests/redteam/: test_redteam_suite.py
tests/regulations/: test_connector_policy.py  test_kr_packs.py  test_label_merge_monotonic.py  test_pack_deps_declared.py  test_tenant_loader_canary.py  test_tenant_loader_canary_none.py  test_tenant_loader_merge_guards.py
tests/release/: test_excluded_tier_scan.py  test_extract_path.py  test_governance_and_notes.py  test_prose_scan.py  test_public_release_manifest.py  test_pyproject_core_deps.py  test_sbom.py  test_spdx_headers.py
tests/sdk/: test_decorators.py  test_middleware.py
tests/steer/: test_interrupt_core.py  test_interrupt_integration.py  test_per_run_engine_registry.py  test_sg_01_engine_registry.py  test_sg_04_resumed_fields.py  (+11 more)
(+138 files in other folders)
